# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  17 Jun 2005; Mike Frysinger <vapier@gentoo.org> bin/repoman:
  Report exit status if gpg failed to return with 0.

  14 Jun 2005; Marius Mauch <genone@gentoo.org> man/portage.5:
  Remove references to non-existant $PORTDIR/profiles/use.mask.

  13 Jun 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild.sh:
  Use the %p output modifier instead of %F so we don't have to update the
  output by removing all the $D references.

  06 Jun 2005; Jason Stubbs <jstubbs@gentoo.org> bin/dispatch-conf
  pym/dispatch_conf.py: Brought forward updates in stable.

  29 May 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Add some banner messages to the compile / package steps.

  29 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepall:
  Add a QA check to see if PORTAGE_TMPDIR leaked into libtool scripts (*.la).

  24 May 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Allow src_install() to abort if scanelf locates questionable binaries and 
  user has 'stricter' in their FEATURES.

  23 May 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh:
  Make sure the files passed to unpack actually exist.

  20 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepstrip
  bin/ebuild-default-functions.sh:
  Removed calls to readelf and replaced with scanelf.  Added more QA checks 
  for various issues related to ELF binaries.

  11 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Redesigned and rewrote DependSpec.

  06 May 2005; Brian Harring <ferringb@gentoo.org> pym/config.py: Dsd supplied 